# pvt_2023

./: .gitignore  .gitmodules  .rh_project  Makefile  NOTES.md  README.md  stack.auto.repos  stack.repos  stack.sim.repos
cartographer_config/: localization.lua  mapping.lua  trajectory_builder_2d.lua
follow_center_line/: package.xml  setup.cfg
follow_center_line/follow_center_line/: create_line.py  pure_pursuit.py
follow_center_line/launch/: follow_line.launch.py
patches/: Fix_stage_CMakeLists_txt_Fix_stage_ros2_CMakeLists_txt.patch  patch-stage.sh
src/auto/: CMakeLists.txt  package.xml
src/auto/config/: orange.yaml  tx2-auto-usa.yaml  tx2-auto.cfg
src/auto/env-hooks/: auto-cli-autocompletion.sh.in
src/auto/launch/: auto.ftg.launch.py  auto.localization.launch.py  auto.slam.launch.py  auto.static_tf.launch.py  drive_api.launch.py  online_sync_launch.py  stage.launch.py  stage_sample_ftg.launch.py  teensy.launch.py  ust10lx.launch.py  vesc.launch.py
src/auto/scripts/: auto-cli-wrapper.sh.in  save_slam.sh  stop.sh
src/auto/scripts/auto-cli/: auto.sh
src/auto/scripts/auto-cli/plugins/: start.sh  stop.sh
src/auto/urdf/: auto.urdf
src/auxiliary/pwm_to_steer/: package.xml  setup.cfg  setup.py
src/auxiliary/pwm_to_steer/pwm_to_steer/: pwm_to_steer_node.py
src/auxiliary/rosmeasure/: CHANGELOG.md  setup.cfg  setup.py
src/decision_and_control/follow_the_gap_v0_ride/follow_the_gap_v0_ride/: launchers.py  ride_node.py
src/follow_center_line/: package.xml  setup.py
src/follow_center_line/follow_center_line/: create_line.py  create_lineEDF.py  pure_pursuit.py
src/follow_center_line/launch/: follow_line.launch.py
src/launchers/: package.xml
src/launchers/launch/: components.launch  run_follow-the-gap.launch  sensors.launch  stage_sample_ftg.launch.py
src/launchers/launchers/: launchers.py
src/messages/trajectory_msgs/: CMakeLists.txt
src/perception/recognition/cartographer_slam/: package.nom  package.xml
src/perception/recognition/cartographer_slam/config/: localization.lua  localization_slower.lua  mapping.lua
src/perception/recognition/cartographer_slam/launch/: localization.launch  localization.launch.py  mapping.launch  mapping.launch.py  mapping_clean.launch
src/perception/recognition/slam_toolbox_slam/: CMakeLists.txt  package.xml
src/perception/recognition/slam_toolbox_slam/config/: slam.yaml
src/perception/recognition/slam_toolbox_slam/launch/: mapping.launch.py
src/perception/sensors/lidar/ust10lx/: setup.cfg
src/perception/sensors/lidar/ust10lx/launch/: start.launch  start.launch.py
src/storage/: CMakeLists.txt
src/storage/stage/apriltags/: atag1.model
src/storage/stage/map/: circuit_playground.pgm  intersection_simple.pgm  intersection_simple.yaml
src/storage/stage/model/: tx2-auto-3.model
src/storage/stage/world/: ciirc-prizemi-draha.world  intersection_complex.world  intersection_simple.world  intersection_simple2.world  test_track.world
src/vehicle_platform/drive_api/: CHANGELOG.md  package.nom
src/vehicle_platform/drive_api/cfg/: tx2-auto.json
src/vehicle_platform/drive_api/drive_api/: drive_api_node.py
ws/: .colcon_workspace
ws/src/auto/: CMakeLists.txt
ws/src/auto/config/: tk1-auto.cfg  tx2-auto-3.yaml  tx2-auto.yaml
ws/src/auto/launch/: auto.ftg.launch.py  stage.launch.py  stage_sample_ftg.launch.py
ws/src/auto/scripts/: auto.sh  save_slam.sh  start.sh
ws/src/auxiliary/rosmeasure/: package.xml
ws/src/auxiliary/rosmeasure/rosmeasure/: utils.py
ws/src/configs/: tx2-auto-3.yaml  tx2-auto.cfg
ws/src/decision_and_control/follow_the_gap_v0/: CMakeLists.txt  package.xml
ws/src/decision_and_control/follow_the_gap_v0/launch/: start.launch
ws/src/decision_and_control/follow_the_gap_v0/src/: follow_the_gap_ride.py  main.cpp
ws/src/decision_and_control/follow_the_gap_v0_ride/: package.xml  setup.cfg  setup.py
ws/src/decision_and_control/follow_the_gap_v0_ride/cfg/: ftgr.cfg
ws/src/decision_and_control/follow_the_gap_v0_ride/follow_the_gap_v0_ride/: launchers.py  ride_node.py
ws/src/demo/: package.xml  setup.py
ws/src/launchers/: setup.cfg  setup.py
ws/src/launchers/launch/: run_follow-the-gap.launch  stage.launch  stage.launch.py  stage_sample.launch  stage_sample_ftg.launch  stage_sample_intersection.launch
ws/src/launchers/launchers/: launch_components.py  launch_sensors.py  launchers.py
ws/src/messages/f1tenth_race/: CMakeLists.txt  package.xml
ws/src/messages/trajectory/: CMakeLists.txt  package.xml
ws/src/messages/trajectory_msgs/: package.xml
ws/src/messages/trajectory_msgs/msg/: VehicleTrajectory.msg
ws/src/messages/vesc_msgs/: CMakeLists.txt  package.xml
ws/src/messages/vesc_msgs/msg/: VescStateStamped.msg
ws/src/perception/recognition/cartographer_slam/: CMakeLists.txt  package.xml
ws/src/perception/recognition/obstacle_substitution/: package.xml  setup.py
ws/src/perception/sensors/lidar/ust10lx/: package.nom  package.xml  setup.py
ws/src/perception/sensors/lidar/ust10lx/ust10lx/: launchers.py
ws/src/storage/: package.xml
ws/src/storage/rviz/: stage_sample.rviz  stage_sample_two_cars.rviz
ws/src/storage/stage/apriltags/: atag0.model  atag2.model  atag3.model
ws/src/storage/stage/map/: circuit_playground.yaml  intersection_complex.pgm  intersection_complex.yaml  intersection_skew.pgm  intersection_skew.yaml
ws/src/storage/stage/model/: tx2-auto-3.model
ws/src/storage/stage/world/: circuit_playground.world  intersection_skew.world  test_track.pgm  test_track.world
ws/src/vehicle_platform/drive_api/: package.xml  setup.cfg  setup.py
ws/src/vehicle_platform/drive_api/cfg/: INFO.md  tx2-auto.json
ws/src/vehicle_platform/drive_api/drive_api/: drive_api_helpers.py  drive_api_node.py  launchers.py
ws/src/vehicle_platform/drive_api/launch/: start.launch  start.launch.py
ws/src/vehicle_platform/teensy/: CMakeLists.txt  package.nom  package.xml  requirements.txt
ws/src/vehicle_platform/teensy/launch/: start.launch
ws/src/vehicle_platform/vesc/: CMakeLists.txt  package.xml
ws/src/vehicle_platform/vesc/launch/: start.launch
(+11 files in other folders)
