<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_center_line</name>
  <version>1.0.0</version>
  <description>Autonomous following of center line with dynamic obstacle avoidance</description>
  <maintainer email="danekja5@fel.cvut.cz">Jan Daněk</maintainer>
  <license>Apache license 2.0</license>
  <author email="danekja5@fel.cvut.cz">Jan Daněk</author>
  <author email="kuchape4@fel.cvut.cz">Petr Kuchař</author>
  <author email="janesada@fel.cvut.cz">Adam Jáneš</author>
  <author email="lencmich@fel.cvut.cz">Michal Lenc</author>
  <author email="brozbohu@fel.cvut.cz">Bohumil Brož</author>
  <author email="polakka7@fel.cvut.cz">Kateřina Poláková</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>drive_api_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
