<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>launchers</name>
	<version>0.1.5</version>
	<description>
		This package is used to create and run launch files for all components.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<exec_depend>rclpy</exec_depend>

	<!-- TODO: remove once this package is fully ported to ROS 2 -->
	<!-- <run_depend>roslaunch_lunar</run_depend> -->

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>

</package>
