<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartographer_slam</name>
  <version>0.0.3</version>
  <description>
    This package is used to integrate the cartographer_ros package
    with our platform.
  </description>
  <maintainer email="endlemar@fel.cvut.cz">Martin Endler</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
