<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>follow_the_gap_v0_ride</name>
	<version>0.2.4</version>
	<description>
		Follow The Gap algorithm implementation.
		See 'README.md' for more information.

		Note: Public version is available at https://github.com/CTU-IIG/f1t-ftg/.
		Note: This version contains also FTGR (Follow The Gap Ride node), which
		was removed in the public version.
		Note: FTG code was sanitized and checked by BUT. It should be completely
		safe and free of errors. (v. 0.2.0)
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="anderssp1994@gmail.com">Anders Solberg Pedersen</author>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<exec_depend>rclpy</exec_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>obstacle_msgs</exec_depend>

	<!-- TODO: uncomment once ported -->
	<!-- <exec_depend>drive_api</exec_depend> -->

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>

</package>
