<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>vesc</name>
	<version>0.0.1</version>
	<description>
		This package is used as a standardized option to establish a connection
		with VESC.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<!-- TODO: Is there ROS 2 version? Sort out. Then uncomment once we run on real hardware. -->
	<!-- <exec_depend>vesc_driver</exec_depend> -->

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
