<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>ust10lx</name>
	<version>0.0.1</version>
	<description>
		This package is used as a standardized option to connect to a lidar
		and publish its data.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<exec_depend>rclpy</exec_depend>

	<exec_depend>urg_node</exec_depend>

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>

</package>
